REGRESSION (r176351): Parts of apple.com/contact aren't Lookup-able https://bugs.webkit.org/show_bug.cgi?id=138960 <rdar://problem/19056715>

Reviewed by Beth Dakin.

* UIProcess/mac/WKActionMenuController.mm:
(-[WKActionMenuController _defaultMenuItemsForDataDetectedText]):
* WebView/WebActionMenuController.mm:
(-[WebActionMenuController _defaultMenuItemsForDataDetectedText]):
Blacklist contact results, because they don't have useful menus. If we
bail before setting up _currentActionContext, we'll still allow fallthrough
to ordinary text actions, avoiding mysterious failure when a contact is detected.

This doesn't break the case that r176351 was intended to fix,
because in that case we were detecting e.g. addresses.

* platform/spi/mac/DataDetectorsSPI.h:
Softlink some SPI.



Canonical link: https://commits.webkit.org/156843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176463 268f45cc-cd09-0410-ab3c-d52691b4dbfc